change function parser header module

--- a/http-client/Makefile
+++ b/http-client/Makefile
@@ -10,6 +10,7 @@ CFLAGS  = -g -Wall
 TARGET = 1612340
 OBJ = main.o url_parser.o
 URL_PRS_PATH = ./module/parse_url/
+HD_PRS_PATH = ./module/parse_response_header/
 BIN_PATH = ./bin/
 OBJ_PATH = ./object/
 
@@ -18,10 +19,13 @@ all: $(TARGET)
 $(TARGET): $(OBJ)
 	$(CC) $(CFLAGS) $(OBJ_PATH)/*.o -o $(BIN_PATH)/$@
 
-main.o: main.c $(URL_PRS_PATH)/url_parser.h
+main.o: main.c $(URL_PRS_PATH)/url_parser.h $(HD_PRS_PATH)/header_res_parser.h
 	$(CC) $(CFLAGS) -c $< -o $(OBJ_PATH)/$@
 
 url_parser.o: $(URL_PRS_PATH)/url_parser.c $(URL_PRS_PATH)/url_parser.h
+	$(CC) $(CFLAGS) -c $< -o $(OBJ_PATH)/$@
+
+header_parser.o: $(HD_PRS_PATH)/header_res_parser.c $(HD_PRS_PATH)/header_res_parser.h
 	$(CC) $(CFLAGS) -c $< -o $(OBJ_PATH)/$@
 
 clean:
